lang/tests/contract/common/ui/fail/16-invalid-parameter-type.rs
use liquid_lang as liquid;

#[liquid::contract]
mod noop {
    #[liquid(storage)]
    struct Noop {}

    #[liquid(methods)]
    impl Noop {
        pub fn new(&mut self) {}

        pub fn noop(&self, value: f32) {}
    }
}

fn main() {}
