lang/tests/contract/common/ui/fail/16-invalid-parameter-type.stderr
error[E0277]: the trait bound `f32: You_Should_Use_An_Valid_Input_Type` is not satisfied
  --> $DIR/16-invalid-parameter-type.rs:12:35
   |
12 |         pub fn noop(&self, value: f32) {}
   |                                   ^^^ the trait `You_Should_Use_An_Valid_Input_Type` is not implemented for `f32`
